<resources>
    <string name="app_name">BMI</string>

    <string name="weight">Weight:</string>
    <string name="kg">kg</string>
    <string name="height">Height:</string>
    <string name="m">m</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="result">Result</string>
    <string name="exit">Exit</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="calculate_your_body_mass_index">Calculate your Body Mass Index</string>
    <string name="enter_weight_kg">Enter weight (kg)</string>
    <string name="enter_height_m">Enter height (m)</string>
    <string name="your_bmi">Your BMI</string>
</resources>