<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0d0d0d">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f2f2f2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:background="@drawable/bg_gradient_header">

                <TextView
                    android:id="@+id/tvBMI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bmi_calculator"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate_your_body_mass_index"
                    android:textColor="#E0F2F1"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:text="@string/weight"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#0d0d0d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/etWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/enter_weight_kg"
                    android:inputType="numberDecimal"
                    android:padding="14dp"
                    android:textColor="#0d0d0d"
                    android:textColorHint="#990d0d0d"
                    android:background="@drawable/bg_input"
                    android:layout_marginTop="6dp"/>

                <TextView
                    android:text="@string/height"
                    android:textColor="#0d0d0d"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"/>

                <EditText
                    android:id="@+id/etHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/enter_height_m"
                    android:inputType="numberDecimal"
                    android:padding="14dp"
                    android:textColor="#0d0d0d"
                    android:textColorHint="#990d0d0d"
                    android:background="@drawable/bg_input"
                    android:layout_marginTop="6dp"/>

                <Button
                    android:id="@+id/btnCalculate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate_bmi"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="24dp"
                    app:backgroundTint="#21BFA2"
                    app:cornerRadius="14dp"/>

                <LinearLayout
                    android:id="@+id/resultLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:visibility="gone"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_bmi"
                        android:textColor="#444444"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="#21BFA2"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/exit"
                        android:textColor="#0d0d0d"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:backgroundTint="#D3D3D3"
                        app:cornerRadius="10dp"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>